force-app/main/default/objects/District_Mapping__c/District_Mapping__c.object-meta.xml
<CustomObject>
    <description>Object to define what district owns which zip codes</description>
    <label>District Mapping</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>District Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>District Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>