force-app/main/default/objects/District_Mapping__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Zip Code</label>
    <referenceTo>Zip_Code__c</referenceTo>
    <relationshipLabel>District Mappings</relationshipLabel>
    <relationshipName>District_Mappings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>