force-app/main/default/objects/District_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>District__c</columns>
    <columns>Region__c</columns>
    <columns>State__c</columns>
    <columns>Zip_Code__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>